--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "description": "a social network for developers",
   "main": "server.js",
   "scripts": {
-    "start": "concurrently \"npm run server\" \"npm run client\"",
+    "start": "node server",
     "server": "nodemon server",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-
     "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "repository": {
@@ -31,10 +30,11 @@
     "gravatar": "^1.8.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.8",
-    "request": "^2.88.2"
-  },
-  "devDependencies": {
+    "request": "^2.88.2",
     "concurrently": "^5.3.0",
     "nodemon": "^2.0.4"
+  },
+  "devDependencies": {
+  
   }
 }
